--- a/KnowItAll/MyPosts.storyboard
+++ b/KnowItAll/MyPosts.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dXq-cm-hfk">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="XPX-li-SW0">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,6 +11,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="nVK-T0-TCr">
+            <objects>
+                <navigationController id="XPX-li-SW0" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tZT-NL-E1Z">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="dXq-cm-hfk" kind="relationship" relationship="rootViewController" id="094-Ns-fJx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4dH-Tr-EUt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-689" y="441"/>
+        </scene>
         <!--My Posts-->
         <scene sceneID="5Jk-f2-D0p">
             <objects>
@@ -214,10 +230,10 @@
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HcF-FM-zTs">
-                                <rect key="frame" x="0.0" y="63" width="375" height="55"/>
+                                <rect key="frame" x="0.0" y="107" width="375" height="11"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="n8O-35-tTm">
-                                        <rect key="frame" x="30" y="13" width="314" height="29"/>
+                                        <rect key="frame" x="30" y="-9" width="314" height="29"/>
                                         <segments>
                                             <segment title="Review"/>
                                             <segment title="Polls"/>
@@ -235,7 +251,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="KnowItAll" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOt-5n-ML7">
-                                        <rect key="frame" x="148" y="27" width="80.5" height="35"/>
+                                        <rect key="frame" x="148" y="71" width="80.5" height="21.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -266,27 +282,25 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="My Posts" image="myPosts" id="d6N-IQ-XB9"/>
+                    <navigationItem key="navigationItem" id="rzi-yu-Ho8"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="segmentedControl" destination="n8O-35-tTm" id="ktF-jR-tJU"/>
                         <outlet property="tableView" destination="lwX-hh-JKf" id="6dC-n0-occ"/>
+                        <segue destination="jJF-jG-Yzf" kind="show" identifier="showPollPage" id="ymk-Q1-ycJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8QE-yN-M3z" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <view contentMode="scaleToFill" id="GwB-Gx-f5F">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="10"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <subviews>
-                        <view alpha="0.5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W6c-kL-u0m">
-                            <rect key="frame" x="0.0" y="9" width="375" height="1"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        </view>
-                    </subviews>
-                    <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
-                </view>
             </objects>
             <point key="canvasLocation" x="180" y="456.52173913043481"/>
+        </scene>
+        <!--PollPage-->
+        <scene sceneID="5bc-NP-eW5">
+            <objects>
+                <viewControllerPlaceholder storyboardName="PollPage" id="jJF-jG-Yzf" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NaI-DU-hsh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="842" y="270"/>
         </scene>
     </scenes>
     <resources>
