--- a/KnowItAll/MyPosts.storyboard
+++ b/KnowItAll/MyPosts.storyboard
@@ -14,9 +14,9 @@
         <!--Navigation Controller-->
         <scene sceneID="nVK-T0-TCr">
             <objects>
-                <navigationController id="XPX-li-SW0" sceneMemberID="viewController">
+                <navigationController navigationBarHidden="YES" id="XPX-li-SW0" sceneMemberID="viewController">
+                    <nil key="simulatedTopBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tZT-NL-E1Z">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -230,10 +230,10 @@
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HcF-FM-zTs">
-                                <rect key="frame" x="0.0" y="107" width="375" height="11"/>
+                                <rect key="frame" x="0.0" y="63" width="375" height="55"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="n8O-35-tTm">
-                                        <rect key="frame" x="30" y="-9" width="314" height="29"/>
+                                        <rect key="frame" x="30" y="13" width="314" height="29"/>
                                         <segments>
                                             <segment title="Review"/>
                                             <segment title="Polls"/>
@@ -251,7 +251,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="KnowItAll" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOt-5n-ML7">
-                                        <rect key="frame" x="148" y="71" width="80.5" height="21.5"/>
+                                        <rect key="frame" x="148" y="27" width="80.5" height="35"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
