--- a/KnowItAll/Base.lproj/LaunchScreen.storyboard
+++ b/KnowItAll/Base.lproj/LaunchScreen.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -29,17 +30,29 @@
                                     <constraint firstAttribute="width" constant="100" id="Myi-wI-P7i"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="KnowItAll" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZUl-On-nLX">
+                                <rect key="frame" x="19" y="172" width="336" height="59"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="59" id="TRa-Mr-H96"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="60"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.70510047674179077" green="0.19208674132823944" blue="0.24321247637271881" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="DSL-A3-kDS" firstAttribute="top" secondItem="ZUl-On-nLX" secondAttribute="bottom" constant="52" id="07S-eX-wdy"/>
                             <constraint firstItem="DSL-A3-kDS" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="TRM-1n-Ma0"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ZUl-On-nLX" secondAttribute="trailing" constant="4" id="aJJ-6g-MO4"/>
                             <constraint firstItem="DSL-A3-kDS" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="bQ4-wU-Gap"/>
+                            <constraint firstItem="ZUl-On-nLX" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="3" id="f7I-ij-xrY"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
     <resources>
